Merge origin/master
Conflicts:
	.gitignore