@@ -28,53 +28,35 @@ public class Puzzle {
             for (int i2 = i1 + 1; i2 < tableAsVector.length; i2++)
                 if ((tableAsVector[i1] > tableAsVector[i2]) && 
                         (tableAsVector[i2] != 0)) sum++;
-        return (sum % 2 == 0);
-        //return ((sum + this.initState.emptyRow + 1) % 2 == 0);
+        //return (sum % 2 == 0); нечет n
+        //return ((sum + this.initState.emptyRow + 1) % 2 == 0); чет n
+        return (this.initState.table.length % 2 != 0) ? (sum % 2 == 0) : 
+                ((sum + this.initState.emptyRow + 1) % 2 == 0);
     }
     public TableState[] solve() {
         if (!this.isSolvable()) return null;
         PriorityQueue<TableState> open = new PriorityQueue<>((state1, state2) -> 
                         Integer.compare(state1.getHeuristic(), state2.getHeuristic()));
         ArrayList<TableState> closed = new ArrayList<>();
-        ExecutorService execSvc = Executors.newFixedThreadPool(2);
-        for (open.add(this.initState); !open.peek().equals(this.goalState); ) {
-            LinkedList<TableState> newStates = new LinkedList<>();
-            for (TableState.MoveDirection moveDirection : TableState.MoveDirection.values())
-                try {
-                    newStates.addFirst(new TableState(open.peek(), moveDirection, this.goalState));
-                    
-                    CountDownLatch latch = new CountDownLatch(1);
-                    Future[] tasks = new Future[2];
-                    tasks[0] = execSvc.submit(() -> {
-                        int res = closed.subList(0, closed.size()/2).indexOf(newStates.peekFirst());
-                        latch.countDown();
-                        return res;
-                            });
-                    tasks[1] = execSvc.submit(() -> {
-                        int res = closed.subList(closed.size()/2, closed.size()).indexOf(newStates.peekFirst());
-                        latch.countDown();
-                        return res;
-                            });
-                    latch.await();
-                    int idx;
-                    if (tasks[0].isDone()) 
-                        idx = (Integer)tasks[0].get();
-                    else 
-                        idx = (Integer)tasks[1].get();
-                    tasks[0].cancel(true);
-                    tasks[1].cancel(true);
-                    
-                    //int idx = closed.indexOf(newStates.peekFirst());
-                    if (newStates.peekFirst().hasBetterHeuristic(closed.get(idx))) {
-                        closed.set(idx, closed.get(closed.size()-1));
-                        closed.remove(closed.size()-1);
-                    } else
-                        newStates.removeFirst();
-                } catch (ArrayIndexOutOfBoundsException | InterruptedException | ExecutionException e) {}
-            closed.add(open.poll());
-            open.addAll(newStates);
+        try {
+            for (open.add(this.initState); !open.peek().equals(this.goalState); ) {
+                LinkedList<TableState> newStates = new LinkedList<>();
+                for (TableState.MoveDirection moveDirection : TableState.MoveDirection.values())
+                    try {
+                        newStates.addFirst(new TableState(open.peek(), moveDirection, this.goalState));
+                        int idx = closed.indexOf(newStates.peekFirst());
+                        if (newStates.peekFirst().hasBetterHeuristic(closed.get(idx))) {
+                            closed.set(idx, closed.get(closed.size()-1));
+                            closed.remove(closed.size()-1);
+                        } else
+                            newStates.removeFirst();
+                    } catch (ArrayIndexOutOfBoundsException e) {}
+                closed.add(open.poll());
+                open.addAll(newStates);
+            }
+        } catch (NullPointerException e) {
+            return null;
         }
-        execSvc.shutdownNow();
         LinkedList<TableState> solution = new LinkedList<>();
         for (TableState cursor = open.peek(); cursor != null; cursor = cursor.previousState)
             solution.addFirst(cursor);
